# hsrm5060

./: .dockerignore  .env.example  .gitignore  .replit  API_DOCUMENTATION.md  CLOUD_DEPLOYMENT_GUIDE.md  DEPLOY_GUIDE.md  Dockerfile  FINAL_SYSTEM_REPORT.md  FUTURE_DEVELOPMENT_IDEAS.md  GLOBAL_ACCESS_GUIDE.md  GLOBAL_ACCESS_SUMMARY.md  Insurance_Claims_System_20250723_071459_INFO.txt  NETWORK_ACCESS_GUIDE.md  OCR_SETUP_GUIDE.md  README.md  README_ARCHIVE.md  README_DEPLOYMENT.md  README_EMAIL_SETUP.md  README_SYSTEM.md  USER_MANUAL.md  WHATSAPP_INTEGRATION_GUIDE.md  access_guide.html  add_security_fields.py  app.py  auto_global_setup.py  automated_test_suite.py  build.sh  check_db.py  config.py  create_employee_user.py  create_project_archive.py  create_sample_claim.py  create_test_image.py  create_zip.py  debug_app.py  debug_server.py  deploy.sh  deploy_flask.py  deploy_helper.py  (+58 more)
app/: __init__.py  advanced_notifications.py  ai_classification.py  audit_utils.py  backup_manager.py  email_utils.py  export_utils.py  file_manager.py  forms.py  models.py  notification_manager.py  notification_services.py  notifications.py  ocr_utils.py  performance.py  performance_utils.py  reports_utils.py  security.py  security_manager.py  security_manager_simple.py  security_utils.py  simple_ocr.py  tesseract_ocr.py  two_factor_auth.py
attached_assets/: Pasted--Flask-Djan-1752743978195_1752743978197.txt  Pasted-TemplateNotFound-jinja2-exceptions-TemplateNotFound-admin-settings-html-Traceback-most-recent--1752745429152_1752745429152.txt  (+2 more)
files_to_send/: test_file.txt
scripts/: backup.sh
(+82 files in other folders)
